--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "build": "gridsome build",
     "develop": "gridsome develop",
-    "explore": "gridsome explore"
+    "explore": "gridsome explore",
+    "forestry:preview": "gridsome develop"
   },
   "dependencies": {
     "@gridsome/remark-prismjs": "0.3.0",
